fix: Icons overflow box

--- a/themes/statusline/assets/sass/_socialLinks.scss
+++ b/themes/statusline/assets/sass/_socialLinks.scss
@@ -3,13 +3,14 @@ div.social-links {
 	flex-direction: row;
 	justify-content: center;
 	margin: 0.5rem 0;
+	max-width: 100%;
 
 	li {
 		list-style: none;
 		margin: 0 1rem;
 	}
 
-	a:hover {
+	i:hover {
 		color: $text-color;
 	}
 }
